--- a/aboutus.html
+++ b/aboutus.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+<!-- navbar comes here -->
     <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="500">
         <div class="container">
 		<div class="logo-container">
@@ -74,20 +75,12 @@
             </div>
         </div>
     </nav>
-
-
-<!--    navbar come here          -->
-
-
-
 <!-- end navbar  -->
 
 
-
+<!-- wallpaper comes here -->
 <div class="wrapper">
-<!-- content come here     -->
-<div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
-            <div class="filter"></div>
+<div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160')">
     		<div class="content-center">
     			<div class="container">
     				<div class="title-brand">
@@ -106,13 +99,42 @@
             <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); ">
             </div>
     	</div>
+<!-- end wallpaper -->
 
+
+<!-- content comes here     -->
+	<div class="container">
+	<!--I'll center some things-->
+	<center>
+	<h1>About us:</h1>
+	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" height="230" src="logo.png" width="230">
+	</center>
+	<br>
+	<br>
+	<p><b>Name:</b> BinEnergy</p>
+	<br>
+	<br>
+	<p><b>Schedule:</b></p>
+	<br>
+	<p>Industry (24 h)</p>
+	<br>
+	<p>Shop (9:00 - 22:00)</p>
+	<br>
+	<p>We are also on TV!</p>
+	<br>
+	<br>
+	<p><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</p>
+	</div>
+	</div>
+	</div>
+<!-- end content -->
 
 
 <!-- Modal Bodies come here -->
 
 <!--   end modal -->
 
+<!-- Footer comes here -->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -133,7 +155,7 @@
             </div>
         </div>
     </footer>
-
+<!-- end footer -->
 </body>
 <!-- Core JS Files -->
 <script src="assets/js/jquery-3.2.1.js" type="text/javascript"></script>
