--- a/products.html
+++ b/products.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+<!-- navbar comes here -->
     <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="500">
         <div class="container">
 		<div class="logo-container">
@@ -74,20 +75,12 @@
             </div>
         </div>
     </nav>
-
-
-<!--    navbar come here          -->
-
-
-
 <!-- end navbar  -->
 
 
-
+<!-- wallpaper comes here -->
 <div class="wrapper">
-<!-- content come here     -->
-<div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
-            <div class="filter"></div>
+<div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160')">
     		<div class="content-center">
     			<div class="container">
     				<div class="title-brand">
@@ -106,13 +99,19 @@
             <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); ">
             </div>
     	</div>
+<!-- end wallpaper -->
 
+
+<!-- content comes here     -->
+
+<!-- end content -->
 
 
 <!-- Modal Bodies come here -->
 
 <!--   end modal -->
 
+<!-- Footer comes here -->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -133,7 +132,7 @@
             </div>
         </div>
     </footer>
-
+<!-- end footer -->
 </body>
 <!-- Core JS Files -->
 <script src="assets/js/jquery-3.2.1.js" type="text/javascript"></script>
