--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
 
 <!-- wallpaper comes here -->
 <div class="wrapper">
-<div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160')">
+<div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160.jpg')">
     		<div class="content-center">
     			<div class="container">
     				<div class="title-brand">
