--- a/location.html
+++ b/location.html
@@ -103,7 +103,32 @@
 
 
 <!-- content comes here     -->
-
+	<div class="container">
+	<!--I'll center some things-->
+	<center>
+	<h1>About us:</h1>
+	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" height="230" src="logo.png" width="230">
+	</center>
+	<br>
+	<br>
+	<p><b><a href="https://www.idealista.com/inmueble/38244492/">Factory:</a></b></p>
+	<br>
+	<!-- Map -->
+	<br>
+	<br>
+	<p><b><a href="https://www.idealista.com/inmueble/39670219">Office</a></b></p> 
+	<br>
+	<!-- Map -->
+	<br>
+	<br>
+	<p></b><a href="https://www.idealista.com/inmueble/2220928">Main shop</a></b></p>
+	<br>
+	<!-- Map -->
+	<br>
+	<br>
+	</div>
+	</div>
+	</div>
 <!-- end content -->
 
 
