--- a/aboutus.html
+++ b/aboutus.html
@@ -106,24 +106,44 @@
 	<div class="container">
 	<!--I'll center some things-->
 	<center>
-	<h1>About us:</h1>
+	<h2><b>About us:</b></h2>
 	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" height="230" src="logo.png" width="230">
 	</center>
 	<br>
 	<br>
-	<p><b>Name:</b> BinEnergy</p>
+	<h3><b>Name:</b> BinEnergy</h3>
 	<br>
 	<br>
-	<p><b>Schedule:</b></p>
+	<h3><b>Schedule:</b></h3>
+	<ul>
+		<li><h4>Industry (24 h)</h4></li>
+		<li><h4>Shop (9:00 - 22:00)</h4></li>
+		<li><h4>We are also on TV!</h4></li>
+	</ul>
 	<br>
-	<p>Industry (24 h)</p>
 	<br>
-	<p>Shop (9:00 - 22:00)</p>
-	<br>
-	<p>We are also on TV!</p>
+	<h3><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</h3>
 	<br>
 	<br>
-	<p><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</p>
+	<h3><b>Job positions:</b></h3>
+	<ul>
+		<li><h4>Owners and directors</h4></li>
+		<li><h4>International director</h4></li>
+		<li><h4>Marketing</h4></li>
+		<li><h4>Ad management</h4></li>
+		<li><h4>Ingeniers</h4></li>
+		<li><h4>Distributors</h4></li>
+		<li><h4>Local workers</h4></li>
+	</ul>
+	<br>
+	<br>
+	<h3><b>Competition:</b></h3>
+	<br>
+	<img src="assets/img/competition1.png"></img>
+	<br>
+	<br>
+	<img src="assets/img/competition2.png"></img>
+	<br>
 	</div>
 	</div>
 	</div>
