Last update (I hope)

--- a/aboutus.html
+++ b/aboutus.html
@@ -116,13 +116,27 @@
 	<br>
 	<h3><b>Schedule:</b></h3>
 	<ul>
-		<li><h4>Industry (24 h)</h4></li>
-		<li><h4>Shop (9:00 - 22:00)</h4></li>
-		<li><h4>We are also on TV!</h4></li>
+		<li><h4>Industry (24 h):</h4>
+			<br>
+			<h5>In the factory we have a 24 hours production, but the working time will go from 5 hours to 7 hours if employers work on late hours (00:00 to 08:00).</h5>
+		</li>
+		<li><h4>Shop (9:00 - 22:00):</h4>
+			<br>
+			<h5>People at the office work from 10:00 to 20:00 every working day.</h5>
+			<h5>In the hit hours the shop shows passers-by our new products.</h5>
+		</li>
+		<li>
+			<h4>We are also on TV!</h4>
+		</li>
 	</ul>
 	<br>
 	<br>
 	<h3><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</h3>
+	<br>
+	<br>
+	<h3><b>Our slogan:</b></h3>
+	<h4><i>Approaching cheap & clean energy. </i></h4>
+	<h4>It is based on Iberdrola slogan's: <i><a href="https://www.iberdrola.com/about-us/company-profile/mission-vision-values" target="_blank" >For a better and more sustainable future</a></i></h4>
 	<br>
 	<br>
 	<h3><b>Job positions:</b></h3>
@@ -139,10 +153,10 @@
 	<br>
 	<h3><b>Competition:</b></h3>
 	<br>
-	<img src="assets/img/competition1.png"></img>
+	<img src="assets/img/competition1.png" width="533" height="300"></img>
 	<br>
 	<br>
-	<img src="assets/img/competition2.png"></img>
+	<img src="assets/img/competition2.png" width="533" height="300"></img>
 	<br>
 	</div>
 	</div>
