--- a/location.html
+++ b/location.html
@@ -106,28 +106,45 @@
 	<div class="container">
 	<!--I'll center some things-->
 	<center>
-	<h1>About us:</h1>
-	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" height="230" src="logo.png" width="230">
+	<h1>Where are we?</h1>
+	<br>
+	<br>
+	<a href="https://www.idealista.com/inmueble/38244492" style="color:black;"><h2><b>Factory:</b></h2></a>
+	<br>
+	<img src="assets/img/factory.jpg" width="533" height="300"></img>
+	<br>
+	<h4>Located in alcala de henares, this 5.276 square meters factory can satisfy our fabrication rates and because it is in Madrid, routes can arrive faster.</h4>
+	<br>
+	<br>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.8248378134854!2d-3.392598684966379!3d40.47913997935788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4249bcbd1ea8cb%3A0x59262ba8dc8d8478!2sCarretera+Nacional+II%2C+7%2C+28806+Alcal%C3%A1+de+Henares%2C+Madrid!5e0!3m2!1ses!2ses!4v1522966222099" width="533" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<br>
+	<br>
+	<br>
+	<br>
+	<a href="https://www.idealista.com/inmueble/39670219" style="color:black;"><h2><b>Office:</b></h2></a> 
+	<br>
+	<img src="assets/img/office.jpg" width="533" height="300"></img>
+	<br>
+	<h4>In this place our personal would attend all problems you can have using the bin. Also we take contact with lots of industries and shops to buy them this fastastic invention.
+	<br>
+It is placed in Avenida de Nazaret because is a very peaceful avenue.</h4>
+	<br>
+	<br>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d759.4723924626578!2d-3.67203087078983!3d40.411297098710364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42260320b14023%3A0x5cac7fa4c3f3325a!2sAv.+de+Nazaret%2C+8%2C+28009+Madrid!5e0!3m2!1ses!2ses!4v1522966374369" width="533" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<br>
+	<br>
+	<br>
+	<br>
+	<a href="https://www.idealista.com/inmueble/2220928" style="color:black;"><h2><b>Main shop:</b></h2></a>
+	<br>
+	<img src="assets/img/shop.png" width="533" height="300"></img>
+	<br>
+	<h4>In this shop located in Gran Vía lots of passers-by can see our publicity and could buy one of our products.</h4>
+	<br>
+	<br>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.384006022193!2d-3.7119884849683933!3d40.42249507936444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42287b46e5ceb9%3A0xa161cf9bcc817552!2sGran+V%C3%ADa%2C+59%2C+28013+Madrid!5e0!3m2!1ses!2ses!4v1522966417508" width="533" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<br>
 	</center>
-	<br>
-	<br>
-	<p><b><a href="https://www.idealista.com/inmueble/38244492">Factory:</a></b></p>
-	<br>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.8248378134854!2d-3.392598684966379!3d40.47913997935788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4249bcbd1ea8cb%3A0x59262ba8dc8d8478!2sCarretera+Nacional+II%2C+7%2C+28806+Alcal%C3%A1+de+Henares%2C+Madrid!5e0!3m2!1ses!2ses!4v1522966222099" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	<br>
-	<br>
-	<p><b><a href="https://www.idealista.com/inmueble/39670219">Office:</a></b></p> 
-	<br>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d759.4723924626578!2d-3.67203087078983!3d40.411297098710364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42260320b14023%3A0x5cac7fa4c3f3325a!2sAv.+de+Nazaret%2C+8%2C+28009+Madrid!5e0!3m2!1ses!2ses!4v1522966374369" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	<br>
-	<br>
-	<p></b><a href="https://www.idealista.com/inmueble/2220928">Main shop:</a></b></p>
-	<br>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.384006022193!2d-3.7119884849683933!3d40.42249507936444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42287b46e5ceb9%3A0xa161cf9bcc817552!2sGran+V%C3%ADa%2C+59%2C+28013+Madrid!5e0!3m2!1ses!2ses!4v1522966417508" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	<br>
-	<br>
-	</div>
-	</div>
 	</div>
 <!-- end content -->
 
