--- a/products.html
+++ b/products.html
@@ -103,7 +103,31 @@
 
 
 <!-- content comes here     -->
-
+	<div class="container">
+	<!--I'll center some things-->
+	<center>
+	<h1>Our products</h1>
+	<br>
+	<br>
+	<h2><b>Our bin:</b></h2>
+	<br>
+	<img src="assets/img/bin.jpg"><img>
+	<br>
+	<h4>This is our main and best product. With this machine you can recycle your rubbish turning it into energy and fertilizer!</h4>
+	<br>
+	<br>
+	<br>
+	<br>
+	<h2><b>Experimental products - our car:</b></h2>
+	<br>
+	<img src="assets/img/car.jpg" width="748" height="450"></img>
+	<br>
+	<h4>With our sports car you can run as the fastest and pollute as a bycicle!</h4>
+	<br>
+	</center>
+	</div>
+	</div>
+	</div>
 <!-- end content -->
 
 
