--- a/aboutus.html
+++ b/aboutus.html
@@ -136,7 +136,7 @@
 	<br>
 	<h3><b>Our slogan:</b></h3>
 	<h4><i>Approaching cheap & clean energy. </i></h4>
-	<h4>It is based on Iberdrola slogan's: <i><a href="https://www.iberdrola.com/about-us/company-profile/mission-vision-values" target="_blank" >For a better and more sustainable future</a></i></h4>
+	<h4>It is based on Iberdrola's slogan: <i><a href="https://www.iberdrola.com/about-us/company-profile/mission-vision-values" target="_blank" >For a better and more sustainable future</a></i></h4>
 	<br>
 	<br>
 	<h3><b>Job positions:</b></h3>
