--- a/location.html
+++ b/location.html
@@ -113,7 +113,7 @@
 	<br>
 	<img src="assets/img/factory.jpg" width="533" height="300"></img>
 	<br>
-	<h4>Located in alcala de henares, this 5.276 square meters factory can satisfy our fabrication rates and because it is in Madrid, routes can arrive faster.</h4>
+	<h4>Located in Alcalá de Henares, this 5.276 square meters factory can satisfy our fabrication rates and, since it is in Madrid, routes can arrive faster.</h4>
 	<br>
 	<br>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.8248378134854!2d-3.392598684966379!3d40.47913997935788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4249bcbd1ea8cb%3A0x59262ba8dc8d8478!2sCarretera+Nacional+II%2C+7%2C+28806+Alcal%C3%A1+de+Henares%2C+Madrid!5e0!3m2!1ses!2ses!4v1522966222099" width="533" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -125,7 +125,7 @@
 	<br>
 	<img src="assets/img/office.jpg" width="533" height="300"></img>
 	<br>
-	<h4>In this place our personal would attend all problems you can have using the bin. Also we take contact with lots of industries and shops to buy them this fastastic invention.
+	<h4>In this place our personal would attend all problems which can appear using the bin. Also we contact with lots of industries and shops to buy them this fastastic invention.
 	<br>
 It is placed in Avenida de Nazaret because is a very peaceful avenue.</h4>
 	<br>
