Change facebook page and add products' features

--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/BinEnergy" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/BinEnergy-173357163312704/" target="_blank">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none">Facebook</p>
                         </a>
@@ -78,8 +78,7 @@
 <!-- end navbar  -->
 
 
-<!-- wallpaper comes here -->
-<div class="wrapper">
+<!-- wallpaper comes here -->">
 <div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160.jpg')">
     		<div class="content-center">
     			<div class="container">
@@ -103,6 +102,7 @@
 
 
 <!-- content comes here     -->
+<div class="wrapper">
 	<div class="container">
 	<!--I'll center some things-->
 	<center>
@@ -161,6 +161,7 @@
 	</div>
 	</div>
 	</div>
+</div>
 <!-- end content -->
 
 
