--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/BinEnergy" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/BinEnergy-173357163312704/" target="_blank">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none">Facebook</p>
                         </a>
@@ -79,7 +79,6 @@
 
 
 <!-- wallpaper comes here -->
-<div class="wrapper">
 <div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160.jpg')">
     		<div class="content-center">
     			<div class="container">
