--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/BinEnergy" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/BinEnergy-173357163312704/" target="_blank">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none">Facebook</p>
                         </a>
@@ -115,6 +115,15 @@
 	<br>
 	<h4>This is our main and best product. With this machine you can recycle your rubbish turning it into energy and fertilizer!</h4>
 	<br>
+	<h3><b>Features:</b></h3>
+	<br>
+	<ul>
+		<li>Energy and fertilizer generator</li>
+		<li>Long-term money savings</li>
+		<li>Easy installation</li>
+		<li>Controllable by BinEnergy app</li>
+		<li>24 hours online troubleshooting</li>
+	</ul>
 	<br>
 	<br>
 	<br>
@@ -122,8 +131,16 @@
 	<br>
 	<img src="assets/img/car.jpg" width="748" height="450"></img>
 	<br>
-	<h4>With our sports car you can run as the fastest and pollute as a bycicle!</h4>
+	<h4>With our sports car you can run as the fastest and pollute as much as a bycicle!</h4>
 	<br>
+	<h3><b>Features:</b></h3>
+	<ul>
+		<li>It reaches 500km/h</li>
+		<li>Forget stopping at gas stations</li>
+		<li>Autopilot</li>
+		<li>Multilanguage assistant</li>
+		<li>24 hours online troubleshooting</li>
+	</ul>
 	</center>
 	</div>
 	</div>
