Change feaures align

--- a/products.html
+++ b/products.html
@@ -115,6 +115,7 @@
 	<br>
 	<h4>This is our main and best product. With this machine you can recycle your rubbish turning it into energy and fertilizer!</h4>
 	<br>
+	</center>
 	<h3><b>Features:</b></h3>
 	<br>
 	<ul>
@@ -127,12 +128,14 @@
 	<br>
 	<br>
 	<br>
+	<center>
 	<h2><b>Experimental products - our car:</b></h2>
 	<br>
 	<img src="assets/img/car.jpg" width="748" height="450"></img>
 	<br>
 	<h4>With our sports car you can run as the fastest and pollute as much as a bycicle!</h4>
 	<br>
+	</center>
 	<h3><b>Features:</b></h3>
 	<ul>
 		<li>It reaches 500km/h</li>
@@ -141,7 +144,6 @@
 		<li>Multilanguage assistant</li>
 		<li>24 hours online troubleshooting</li>
 	</ul>
-	</center>
 	</div>
 	</div>
 	</div>
