--- a/joinus.html
+++ b/joinus.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>BinEnergy ⚡ - About us</title>
+	<title>BinEnergy ⚡ - Where are we?</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
@@ -85,6 +85,7 @@
 
 
 <!-- wallpaper comes here -->
+<div class="wrapper">
 <div class="page-header section-dark" style="background-image: url('assets/img/field_river_grass_summer_92677_3840x2160.jpg')">
     		<div class="content-center">
     			<div class="container">
@@ -108,66 +109,27 @@
 
 
 <!-- content comes here     -->
-<div class="wrapper">
 	<div class="container">
 	<!--I'll center some things-->
 	<center>
-	<h2><b>About us:</b></h2>
-	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" height="230" src="logo.png" width="230">
+	<h1>Join us</h1>
+	<br>
+	<br>
+	<h2><b>Engineers' requests:</b></h2>
+	<br>
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSet6zdKtLfz-uptHC4riHw42wn3Fm7EYf1EJOh2t-9iF-e2bw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	<br>
+	<br>
+	<br>
+	<br>
+	<h2><b>Marketing managers' requests:</b></h2>
+	<br>
+	<!--<iframe src="" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
+	<br>
+	<br>
+	<br>
 	</center>
-	<br>
-	<br>
-	<h3><b>Name:</b> BinEnergy</h3>
-	<br>
-	<br>
-	<h3><b>Schedule:</b></h3>
-	<ul>
-		<li><h4>Industry (24 h):</h4>
-			<br>
-			<h5>In the factory we have a 24 hours production, but the working time will go from 5 hours to 7 hours if employers work on late hours (00:00 to 08:00).</h5>
-		</li>
-		<li><h4>Shop (9:00 - 22:00):</h4>
-			<br>
-			<h5>People at the office work from 10:00 to 20:00 every working day.</h5>
-			<h5>In the hit hours the shop shows passers-by our new products.</h5>
-		</li>
-		<li>
-			<h4>We are also on TV!</h4>
-		</li>
-	</ul>
-	<br>
-	<br>
-	<h3><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</h3>
-	<br>
-	<br>
-	<h3><b>Our slogan:</b></h3>
-	<h4><i>Approaching cheap & clean energy. </i></h4>
-	<h4>It is based on Iberdrola's slogan: <i><a href="https://www.iberdrola.com/about-us/company-profile/mission-vision-values" target="_blank" >For a better and more sustainable future</a></i></h4>
-	<br>
-	<br>
-	<h3><b>Job positions:</b></h3>
-	<ul>
-		<li><h4>Owners and directors</h4></li>
-		<li><h4>International director</h4></li>
-		<li><h4>Marketing</h4></li>
-		<li><h4>Ad management</h4></li>
-		<li><h4>Ingeniers</h4></li>
-		<li><h4>Distributors</h4></li>
-		<li><h4>Local workers</h4></li>
-	</ul>
-	<br>
-	<br>
-	<h3><b>Competition:</b></h3>
-	<br>
-	<img src="assets/img/competition1.png" width="533" height="300"></img>
-	<br>
-	<br>
-	<img src="assets/img/competition2.png" width="533" height="300"></img>
-	<br>
 	</div>
-	</div>
-	</div>
-</div>
 <!-- end content -->
 
 
