--- a/location.html
+++ b/location.html
@@ -43,16 +43,22 @@
                         <a class="nav-link" rel="tooltip" title="About us" data-placement="bottom" href="/aboutus">
                             About us
                         </a>
-                    <li class="nav-item">
+                    </li>
 					<li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Check our locations!" data-placement="bottom" href="/location">
                             Where are we?
                         </a>
-                    <li class="nav-item">
+                    </li>
 					<li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Check our products!" data-placement="bottom" href="/products">
                             Our products
                         </a>
+                    </li>
+					<li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="Check our products!" data-placement="bottom" href="/joinus">
+                            Join us
+                        </a>
+					</li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/BinEnergy" target="_blank">
                             <i class="fa fa-twitter"></i>
