Updates on about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -113,12 +113,13 @@
 	<!--I'll center some things-->
 	<center>
 	<h2><b>About us:</b></h2>
-	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" height="230" src="logo.png" width="230">
+	<img class="avatar width-full rounded-2" rel="tooltip" title="BinEnergy's logo" src="logo.png">
 	</center>
 	<br>
 	<br>
 	<h3><b>Name:</b> BinEnergy</h3>
 	<br>
+	<h3><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</h3>
 	<br>
 	<h3><b>Schedule:</b></h3>
 	<ul>
@@ -136,14 +137,9 @@
 		</li>
 	</ul>
 	<br>
-	<br>
-	<h3><b>Purpose:</b> We offer a bin which converts rubbish into both energy and fertilizer.</h3>
-	<br>
-	<br>
 	<h3><b>Our slogan:</b></h3>
 	<h4><i>Approaching cheap & clean energy. </i></h4>
 	<h4>It is based on Iberdrola's slogan: <i><a href="https://www.iberdrola.com/about-us/company-profile/mission-vision-values" target="_blank" >For a better and more sustainable future</a></i></h4>
-	<br>
 	<br>
 	<h3><b>Job positions:</b></h3>
 	<ul>
@@ -156,13 +152,12 @@
 		<li><h4>Local workers</h4></li>
 	</ul>
 	<br>
-	<br>
 	<h3><b>Competition:</b></h3>
 	<br>
-	<img src="assets/img/competition1.png" width="533" height="300"></img>
+	<img src="assets/img/competition1.png" width="533" height="300" class="img-rounded img-responsive"></img>
 	<br>
 	<br>
-	<img src="assets/img/competition2.png" width="533" height="300"></img>
+	<img src="assets/img/competition2.png" width="533" height="300" class="img-rounded img-responsive"></img>
 	<br>
 	</div>
 	</div>
