--- a/products.html
+++ b/products.html
@@ -55,7 +55,7 @@
                         </a>
                     </li>
 					<li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Check our products!" data-placement="bottom" href="/joinus">
+                        <a class="nav-link" rel="tooltip" title="We want you" data-placement="bottom" href="/joinus">
                             Join us
                         </a>
 					</li>
