--- a/aboutus.html
+++ b/aboutus.html
@@ -147,7 +147,7 @@
 		<li><h4>International director</h4></li>
 		<li><h4>Marketing</h4></li>
 		<li><h4>Ad management</h4></li>
-		<li><h4>Ingeniers</h4></li>
+		<li><h4>Engineers</h4></li>
 		<li><h4>Distributors</h4></li>
 		<li><h4>Local workers</h4></li>
 	</ul>
