--- a/aboutus.html
+++ b/aboutus.html
@@ -146,7 +146,7 @@
 		<li><h4>Owners and directors</h4></li>
 		<li><h4>International director</h4></li>
 		<li><h4>Marketing</h4></li>
-		<li><h4>Ad management</h4></li>
+		<li><h4>Ads manager</h4></li>
 		<li><h4>Engineers</h4></li>
 		<li><h4>Distributors</h4></li>
 		<li><h4>Local workers</h4></li>
